--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -39,7 +39,15 @@
                         {% block tbody %}
                             {% for item in categories %}
                                 <div class="row">
-                                    <div class="col-6 col-sm">{{ item.title|u.truncate(50, '...') }}</div>
+                                    <div class="col-6 col-sm">
+                                        {{ item.title|u.truncate(50, '...') }}
+
+                                        <div class="text-black-50 float-right d-none d-lg-inline">
+                                            {% if item.hidden %}
+                                                <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Hidden category'|locale }}"></i>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                     <div class="col-6 col-sm-3">{{ categories.firstWhere('uuid', item.parent).title ?? '<code>&mdash;</code>'|raw }}</div>
                                     <div class="col-12 col-sm-5 text-right">
                                         <form action="/cup/catalog/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete a category?'|locale }}');">
