--- a/src/Template/cup/form-save.twig
+++ b/src/Template/cup/form-save.twig
@@ -1,6 +1,8 @@
-<button type="submit" name="save" value="exit" class="btn btn-primary" style="height: 40px;">
-    {{ 'Save'|locale }}
-</button>
-<button type="submit" name="save" class="btn btn-info btn-icon">
-    <i class="fas fa-save"></i>
-</button>
+<div class="btn-group">
+    <button type="submit" name="save" value="exit" class="btn btn-primary" style="height: 40px;">
+        {{ 'Save'|locale }}
+    </button>
+    <button type="submit" name="save" class="btn btn-info btn-icon">
+        <i class="fas fa-save"></i>
+    </button>
+</div>
