--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -142,7 +142,7 @@
                                             'type': 'text',
                                             'name': 'address',
                                             'prefix': base_url() ~ '/form/',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Адрес формы. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Form address. You can leave it blank, then the value will be generated automatically. It is allowed to use only Latin characters and numbers without spaces'|locale) ~ '"></i>',
                                             'args': {
                                                 'value': item.address,
                                                 'placeholder': 'contact-form',
