--- a/src/Template/cup/user/newsletter/form.twig
+++ b/src/Template/cup/user/newsletter/form.twig
@@ -22,7 +22,7 @@
                                     'label': 'Title'|locale,
                                     'type': 'text',
                                     'name': 'subject',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Название письма"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Letter title'|locale) ~ '"></i>',
                                     'args': {
                                         'required': true,
                                     }
