add autocomplete=off in inputs with list

--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -257,6 +257,7 @@
                                             'args': {
                                                 'value': item.unit,
                                                 'list': 'unit',
+                                                'autocomplete': 'off',
                                             }
                                         } %}
 
